--- a/swagger/index.html
+++ b/swagger/index.html
@@ -39,7 +39,8 @@
     window.onload = function() {
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-        url: "http://localhost:8090/swagger/swagger.yml",
+        // url: "http://localhost:8090/swagger/swagger.yml",
+        url: "https://mobilization.msysconsultgh.com/swagger/swagger.yml",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
